# Autolycus

./: .gitignore  .replit  README.md  background.py  keep_alive.py  main.py  nations.json  pyproject.toml  queries.py  raids.py  requirements.txt  scanner.py  server.py  template.txt  utils.py
cogs/: background.py  config.py  general.py  military.py
data/builds/: 150.json  250.json  2650.json  2800.json  2850.json  2950.json  300.json  3150.json  3200.json  3350.json  3450.json  3650.json  3950.json  4050.json  4200.json  4650.json  4700.json  4750.json  4800.json  4850.json  5050.json  5100.json  5200.json  5300.json  5400.json  5700.json  5950.json
src/: __init__.py  env.py
src/bot/: main.py  queries.py
src/bot/cogs/: alliance_managment.py  background.py  config.py  econ.py  general.py  military.py
src/resources/builds/: 100.json  200.json  2050.json  2350.json  2550.json  2600.json  2700.json  2750.json  2900.json  3000.json  3050.json  3100.json  3250.json  3300.json  3400.json  3500.json  3550.json  3600.json  3700.json  3750.json  3800.json  3850.json  3900.json  4000.json  4100.json  4150.json  4250.json  4300.json  4350.json  4400.json  4450.json  4500.json  4550.json  4600.json  4900.json  4950.json  50.json  5000.json  5250.json  5450.json  (+2 more)
src/resources/sql/: tables.sql
src/resources/templates/: attacksheet.txt
src/scanner/: scanner.py
src/types/: __init__.py  enums.py
src/types/classes/: __base.py  __init__.py  alliance.py  api.py  (+6 more)
src/utils/: __init__.py  common.py
src/web/: server.py
templates/: buildspage.txt  damage.txt  raidspage.txt
(+24 files in other folders)
